--- a/app/src/main/res/layout/activity_show_sport.xml
+++ b/app/src/main/res/layout/activity_show_sport.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ShowSportActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <TextView
         android:id="@+id/tv_showsport_header"
         android:layout_width="wrap_content"
@@ -18,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/ml_showequipment_text"
         android:layout_width="307dp"
         android:layout_height="65dp"
         android:layout_marginTop="100dp"
