--- a/app/src/main/res/layout/activity_show_sport.xml
+++ b/app/src/main/res/layout/activity_show_sport.xml
@@ -14,12 +14,12 @@
         android:id="@+id/tv_showsport_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/tv_login_title_textsize"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:text="@string/tv_showsport_text"
+        android:textSize="@dimen/tv_login_title_textsize"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
         android:id="@+id/ml_showequipment_text"
