--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="85dp"
-        android:text="Logged in Sucessfully!"
+        android:text="@string/tv_main_login_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_main_add"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,7 +41,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:text="Choose your Sport"
+        android:text="@string/ml_main_choose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="70dp"
         android:adjustViewBounds="false"
-        android:background=""
+        android:background="#FAFAFA"
         android:scaleX="3"
         android:scaleY="3"
         app:layout_constraintBottom_toBottomOf="parent"
