--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="@dimen/pic_250dp_padding"
         android:text="@string/tv_login_title_text"
         android:textColor="@color/white"
         android:textSize="@dimen/tv_login_title_textsize"
@@ -38,7 +38,7 @@
         android:id="@+id/et_login_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="@dimen/top_100dp_padding"
         android:hint="@string/et_login_email_hint"
         android:inputType="textEmailAddress"
         android:padding="@dimen/et_16dp_padding"
@@ -51,7 +51,7 @@
         android:id="@+id/et_login_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/et_24dp_padding"
         android:hint="@string/et_login_password_hint"
         android:inputType="textPassword"
         android:padding="@dimen/et_16dp_padding"
@@ -63,7 +63,7 @@
         android:id="@+id/btn_login_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/et_24dp_padding"
         android:background="#3F51B5"
         android:padding="@dimen/btn_8dp_padding"
         android:text="@string/btn_login_login_text"
@@ -78,7 +78,7 @@
         android:id="@+id/ll_login_registernewaccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="@dimen/tv_login_bottom_layout"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
