--- a/app/src/main/res/drawable/textview_border2.xml
+++ b/app/src/main/res/drawable/textview_border2.xml
@@ -5,13 +5,14 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <stroke android:color="@color/colorPrimary"
+            <stroke android:color="@color/orange"
                 android:width="5dp"/>
         </shape>
 
     </item>
 
-    <item android:top="3dp" android:bottom="3dp">
+    <item android:top="3dp"
+        android:bottom="3dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
 
