--- a/app/src/main/res/layout/activity_fotgot_password.xml
+++ b/app/src/main/res/layout/activity_fotgot_password.xml
@@ -7,38 +7,37 @@
     tools:context=".ForgotPasswordActivity">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_forgotpassword_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/tv_forgotpassword_title_text"
+        android:textSize="@dimen/forgot_password_title_textsize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tv_forgotpassword_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/tv_forgotpassword_title_text"
-            android:textSize="@dimen/tv_20sp_textsize"
-            android:textStyle="bold" />
-    </androidx.appcompat.widget.Toolbar>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
         android:id="@+id/tv_forgotpassword_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="@string/tv_forgotpassword_description_text"
         android:textSize="@dimen/tv_forgotpassword_description_textsize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_forgotpassword_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/et_forgotpassowrd_email"
@@ -57,6 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:background="@color/colorPrimary"
         android:paddingTop="@dimen/btn_8dp_padding"
         android:paddingBottom="@dimen/btn_8dp_padding"
         android:text="@string/btn_forgotpassowrd_submit_text"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/tv_5dp_padding"
             android:text="@string/tv_forgotpassword_back_text"
-            android:textSize="@dimen/tv_16sp_textsize"/>
+            android:textSize="@dimen/tv_16sp_textsize" />
 
         <TextView
             android:id="@+id/tv_forgotpassword_login"
@@ -89,8 +89,9 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/tv_5dp_padding"
             android:text="@string/tv_forgotpassword_login_text"
-            android:textStyle="bold"
-            android:textSize="@dimen/tv_16sp_textsize"/>
+            android:textSize="@dimen/tv_16sp_textsize"
+            android:textStyle="bold" />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
