--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#ED2173</color>
+    <color name="colorPrimary">#1BA1E2</color>
     <color name="colorPrimaryDark">#222934</color>
+    <color name="orange">#F0A30A</color>
+
 </resources>
