--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,9 +5,13 @@
 
     <!-- Global variables -->
     <dimen name="tb_toolbar">28sp</dimen>
+    <dimen name="top_100dp_padding">100dp</dimen>
+    <dimen name="pic_250dp_padding">250dp</dimen>
 
     <dimen name="et_16sp_textsize">16sp</dimen>
     <dimen name="et_16dp_padding">16dp</dimen>
+    <dimen name="et_24dp_padding">24dp</dimen>
+
 
     <dimen name="btn_18sp_textsize">18sp</dimen>
     <dimen name="btn_8dp_padding">8dp</dimen>
@@ -18,10 +22,12 @@
 
 
     <!-- FORGOT PASSWORD SCREEN -->
-    <dimen name="forgot_password_title_textsize">18sp</dimen>
+    <dimen name="forgot_password_title_textsize">32sp</dimen>
     <dimen name="forgot_password_textsize">14sp</dimen>
     <dimen name="tv_forgotpassword_description_textsize">18sp</dimen>
 
     <!-- LOGIN SCREEN -->
     <dimen name="tv_login_title_textsize">36sp</dimen>
+    <dimen name="tv_login_bottom_layout">36dp</dimen>
+
 </resources>
